# netbox-reorder

./: README.md  setup.cfg
.github/workflows/: python-publish.yml
netbox_reorder/: __init__.py  ordering.py
netbox_reorder/migrations/: 0001_interface_reordering.py
